# BoB-ChatBot

./: .gitignore  Dockerfile  api.py  auth.py  crud.py  database.py  ioc.py  main.py  models.py  pyproject.toml  requirements.txt  schema.py
